<resources>
    <string name="app_name">Enlist</string>
    <string name="enter_description_of_the_task">Add description</string>
    <string name="descrption">Description</string>
    <string name="enter_title_of_the_task">Add title</string>
    <string name="title">Title</string>
    <string name="edit_task">Edit Task</string>
    <string name="deadline">Deadline</string>
    <string name="select_the_deadline_of_the_task">Add due date</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="organize_your_life_in_seconds">Organize your life in seconds</string>
    <string name="enter_your_prn">Enter your PRN</string>
    <string name="login_through_b_tech_id">(Login through B.Tech ID)</string>
    <string name="welcome_to_enlist">Welcome to Enlist</string>
    <string name="personal">Personal</string>
    <string name="shared">Shared</string>
    <string name="add_to_google_calendar">Add to Google Calendar</string>
    <string name="designed_with_by_enlist">Designed with ❤ by ENLIST</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="enlist">ENLIST</string>
    <string name="support">Support</string>
    <string name="privacy_policy">Terms &amp; Privacy</string>
    <string name="about">About us</string>
    <string name="log_out">Log Out</string>
    <string name="github">GitHub</string>
    <string name="profile">Profile</string>
    <string name="classroom">Classroom</string>
    <string name="cs_b3">CS B3</string>
    <string name="cs_b1">CS B1</string>
    <string name="cs_b2">CS B2</string>
    <string name="cs_b">CS B</string>
    <string name="email_id">Email ID</string>
    <string name="name">Name</string>
    <string name="class_group">Class Group</string>
    <string name="prn">PRN</string>
    <string name="enter_last_3_digits_of_your_prn">(Enter last 3 digits)</string>
    <string name="verify_prn">Verify PRN</string>
    <string name="terms_amp_privacy_policy"><u><![CDATA[Terms & Privacy Policy]]></u></string>
    <string name="get_started">Get Started</string>
</resources>